<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/movie_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMovieText" />

    <TextView
        android:id="@+id/addMovieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/add_movie_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/movieDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/movie_desc_hint"
        app:layout_constraintStart_toStartOf="@+id/movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

    <EditText
        android:id="@+id/movieImdbLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/movie_imdb_hint"
        app:layout_constraintStart_toStartOf="@+id/movieDescription"
        app:layout_constraintTop_toBottomOf="@+id/movieDescription" />

    <Button
        android:id="@+id/addMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="213dp"
        android:onClick="onClickAddButton"
        android:text="@string/add_movie_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:onClick="onClickBackButton"
        android:text="@string/back_button"
        app:layout_constraintEnd_toEndOf="@+id/addMovieButton"
        app:layout_constraintTop_toBottomOf="@+id/addMovieButton" />
</androidx.constraintlayout.widget.ConstraintLayout>